crates/kula-core/tests/snapshots/parser__parse_invalid_marriage_field_recovers.snap
---
source: crates/kula-core/tests/parser.rs
expression: "render(\"marriage m_a_b alice bob name:\\\"oops\\\"\\nperson c name:\\\"C\\\" gender:female\\n\")"
---
ast: Document {
    version: None,
    statements: [
        Marriage(
            MarriageStmt {
                span: ByteSpan {
                    start: 0,
                    end: 24,
                },
                keyword_span: ByteSpan {
                    start: 0,
                    end: 8,
                },
                id: Ident {
                    name: "m_a_b",
                    span: ByteSpan {
                        start: 9,
                        end: 14,
                    },
                },
                spouse_a: Ident {
                    name: "alice",
                    span: ByteSpan {
                        start: 15,
                        end: 20,
                    },
                },
                spouse_b: Ident {
                    name: "bob",
                    span: ByteSpan {
                        start: 21,
                        end: 24,
                    },
                },
                fields: [],
            },
        ),
        Person(
            PersonStmt {
                span: ByteSpan {
                    start: 37,
                    end: 68,
                },
                keyword_span: ByteSpan {
                    start: 37,
                    end: 43,
                },
                id: Ident {
                    name: "c",
                    span: ByteSpan {
                        start: 44,
                        end: 45,
                    },
                },
                fields: [
                    PersonField {
                        span: ByteSpan {
                            start: 46,
                            end: 54,
                        },
                        name_span: ByteSpan {
                            start: 46,
                            end: 50,
                        },
                        kind: Name(
                            StringValue {
                                value: "C",
                                span: ByteSpan {
                                    start: 51,
                                    end: 54,
                                },
                            },
                        ),
                    },
                    PersonField {
                        span: ByteSpan {
                            start: 55,
                            end: 68,
                        },
                        name_span: ByteSpan {
                            start: 55,
                            end: 61,
                        },
                        kind: Gender(
                            GenderValue {
                                value: Female,
                                span: ByteSpan {
                                    start: 62,
                                    end: 68,
                                },
                            },
                        ),
                    },
                ],
            },
        ),
    ],
}
diagnostics: [
    Diagnostic {
        code: "KULA-P10",
        severity: Error,
        message: "field `name` is not valid on `marriage`",
        primary: ByteSpan {
            start: 25,
            end: 29,
        },
        related: [],
    },
]
