crates/kula-core/tests/snapshots/parser__parse_person_with_birth_and_adoption.snap
---
source: crates/kula-core/tests/parser.rs
expression: "render(\"person ravi name:\\\"Ravi\\\" gender:male\\n  birth m_x\\n  adoption m_y start:1985-06-01 end:1990-12-31\\n\")"
---
ast: Document {
    version: None,
    statements: [
        Person(
            PersonStmt {
                span: ByteSpan {
                    start: 0,
                    end: 94,
                },
                keyword_span: ByteSpan {
                    start: 0,
                    end: 6,
                },
                id: Ident {
                    name: "ravi",
                    span: ByteSpan {
                        start: 7,
                        end: 11,
                    },
                },
                fields: [
                    PersonField {
                        span: ByteSpan {
                            start: 12,
                            end: 23,
                        },
                        name_span: ByteSpan {
                            start: 12,
                            end: 16,
                        },
                        kind: Name(
                            StringValue {
                                value: "Ravi",
                                span: ByteSpan {
                                    start: 17,
                                    end: 23,
                                },
                            },
                        ),
                    },
                    PersonField {
                        span: ByteSpan {
                            start: 24,
                            end: 35,
                        },
                        name_span: ByteSpan {
                            start: 24,
                            end: 30,
                        },
                        kind: Gender(
                            GenderValue {
                                value: Male,
                                span: ByteSpan {
                                    start: 31,
                                    end: 35,
                                },
                            },
                        ),
                    },
                ],
                birth: Some(
                    BirthSub {
                        span: ByteSpan {
                            start: 38,
                            end: 47,
                        },
                        keyword_span: ByteSpan {
                            start: 38,
                            end: 43,
                        },
                        marriage_ref: Ident {
                            name: "m_x",
                            span: ByteSpan {
                                start: 44,
                                end: 47,
                            },
                        },
                    },
                ),
                adoptions: [
                    AdoptionSub {
                        span: ByteSpan {
                            start: 50,
                            end: 94,
                        },
                        keyword_span: ByteSpan {
                            start: 50,
                            end: 58,
                        },
                        marriage_ref: Ident {
                            name: "m_y",
                            span: ByteSpan {
                                start: 59,
                                end: 62,
                            },
                        },
                        fields: [
                            AdoptionField {
                                span: ByteSpan {
                                    start: 63,
                                    end: 79,
                                },
                                name_span: ByteSpan {
                                    start: 63,
                                    end: 68,
                                },
                                kind: Start(
                                    DateLit {
                                        span: ByteSpan {
                                            start: 69,
                                            end: 79,
                                        },
                                        circa: false,
                                        year: 1985,
                                        month: Some(
                                            6,
                                        ),
                                        day: Some(
                                            1,
                                        ),
                                    },
                                ),
                            },
                            AdoptionField {
                                span: ByteSpan {
                                    start: 80,
                                    end: 94,
                                },
                                name_span: ByteSpan {
                                    start: 80,
                                    end: 83,
                                },
                                kind: End(
                                    DateLit {
                                        span: ByteSpan {
                                            start: 84,
                                            end: 94,
                                        },
                                        circa: false,
                                        year: 1990,
                                        month: Some(
                                            12,
                                        ),
                                        day: Some(
                                            31,
                                        ),
                                    },
                                ),
                            },
                        ],
                    },
                ],
                malformed_fields: [],
            },
        ),
    ],
}
diagnostics: []
